# invoice-rs

./: Cargo.toml  LICENSE  README.md
src/: app.rs  db.rs  form.rs  main.rs  models.rs  pdf.rs  splash.rs  ui.rs  utils.rs
src/ui/: button.rs  client_form.rs  form.rs  invoice_form.rs  layout.rs  mod.rs  modal.rs  splash.rs
templates/: invoice.html
