[package]
name = "invoice-rs"
version = "0.1.0"
edition = "2024"
authors = ["Aung Min Khant <aungminkhant.shay@gmail.com>"]


[dependencies]
ratatui = "0.29"
crossterm = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.18", features = ["v4"] }
anyhow = "1.0"
image = "0.25"
rand = "0.9.2"
failure = "0.1.8"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
